--- a/templates/seeprivatechat.html
+++ b/templates/seeprivatechat.html
@@ -30,6 +30,10 @@
 						<div class="message">
 							{{item.message}}
 						</div>
+						<div class="entete">
+							<span class="status green"></span>
+							<h3>{{item.created_at}}</h3>
+						</div>
 					{% endfor %}
 				</li>
 				<li class="me">
@@ -37,6 +41,10 @@
 						<div class="triangle"></div>
 						<div class="message">
 							{{item.message}}
+						</div>
+						<div class="entete">
+							<span class="status green"></span>
+							<h3>{{item.created_at}}</h3>
 						</div>
 					{% endfor %}
 				</li>
