--- a/templates/base.html
+++ b/templates/base.html
@@ -14,9 +14,7 @@
     </div>
     {% block contant %}
     {% endblock %}
-    <script>
-
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
