--- a/templates/groupchat.html
+++ b/templates/groupchat.html
@@ -31,8 +31,9 @@
 						{{item.message}}
 					</div>
 					<div class="entete">
-						<span class="status green"></span>
 						<h3>{{item.created_at}}</h3>
+						<br>
+						<h3>{{item.date}}</h3>
 					</div>
 					{% endfor %}
 				</li>
@@ -43,8 +44,9 @@
 						{{item.message}}
 					</div>
 					<div class="entete">
-						<span class="status green"></span>
 						<h3>{{item.created_at}}</h3>
+						<br>
+						<h3>{{item.date}}</h3>
 					</div>
 					{% endfor %}
 				</li>
