--- a/templates/privatechat.html
+++ b/templates/privatechat.html
@@ -28,6 +28,8 @@
 					</div>
 					<div class="entete">
 						<h3>{{item.created_at}}</h3>
+						<br>
+						<h3>{{item.date}}</h3>
 					</div>
 				{% endfor %}
 			</li>
@@ -39,6 +41,8 @@
 					</div>
 					<div class="entete">
 						<h3>{{item.created_at}}</h3>
+						<br>
+						<h3>{{item.date}}</h3>
 					</div>
 				{% endfor %}
 			</li>
