Enhancement of app

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,10 +8,15 @@
 </head>
 
 <body>
-    <div class="p-5 bg-primary text-white text-center">
+    <div class="container text-center">
+        <h1>Chat2Do</h1>
+        <p>Check Out Your Todos And Join The ChatRoom</p>
+    </div>
+    
+    <!-- <div class="p-5 bg-primary text-white text-center">
         <h1>Chat2Do</h1>
         <p>Check Out Your Todos And Join The ChatRoom</p> 
-    </div>
+    </div> -->
     {% block contant %}
     {% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
