--- a/templates/creatatodo.html
+++ b/templates/creatatodo.html
@@ -1,3 +1,9 @@
+<style>
+    body {
+  background-image: url("/static/todo\ bg.png");
+}
+</style>
+
 {% extends "base.html" %}
 {% block contant %}
     <div class="container text-center">
