--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,9 @@
+<style>
+    body {
+  background-image: url("/static/bg\ for\ app.png");
+}
+</style>
+
 {% extends "base.html" %}
 
 {% block contant %}
