--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,13 @@
+<style>
+    .logo {
+        font-weight: bold;
+    }
+    .appinfo {
+        font-weight: bold;
+        font-size: large;
+    }
+</style>
+
 <!DOCTYPE html>
 
 <head>
@@ -9,14 +19,9 @@
 
 <body>
     <div class="container text-center">
-        <h1>Chat2Do</h1>
-        <p>Check Out Your Todos And Join The ChatRoom</p>
+        <h1 class="logo">Chat2Do</h1>
+        <p class="appinfo" >Check Out Your Todos And Join The ChatRoom</p>
     </div>
-    
-    <!-- <div class="p-5 bg-primary text-white text-center">
-        <h1>Chat2Do</h1>
-        <p>Check Out Your Todos And Join The ChatRoom</p> 
-    </div> -->
     {% block contant %}
     {% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
