--- a/templates/login.html
+++ b/templates/login.html
@@ -7,8 +7,10 @@
         width: 250px;
         height: 380px;
         position: absolute;
-        top: 150px;
-        left: 550px;
+        top: 25%;
+        bottom: 50%;
+        left: 40%;
+        right: 50%;
         transform: translate(0%,-5%);
         border-radius: 10px;
         padding: 25px;
