--- a/templates/privatechat.html
+++ b/templates/privatechat.html
@@ -1,3 +1,9 @@
+<style>
+    body {
+  background-image: url("/static/chat\ background.jpg");
+}
+</style>
+
 {% extends "base.html" %}
 
 {% block title %}
