--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,10 +5,12 @@
 }
     .signup-form{
     width: 250px;
-    height: 380px;
+    height: 400px;
     position: absolute;
-    top: 250px;
-    left: 550px;
+    top: 25%;
+    bottom: 50%;
+    left: 40%;
+    right: 50%;
     transform: translate(0%,-5%);
     border-radius: 10px;
     padding: 25px;
@@ -42,7 +44,7 @@
 }
 
 .signup-button{
-    width: 80px;
+    width: 100px;
     font-family: sans-serif;
     text-align: center;
     color: white;
