--- a/templates/seetodos.html
+++ b/templates/seetodos.html
@@ -14,12 +14,12 @@ background-image: url("/static/todo\ bg.png");
             </div>
         {% endif %}
         <br>
-        <h1>Todos</h1>
+        <h1>Todo</h1>
         <br>
         <table class="table">
             <thead>
               <tr>
-                <th scope="col">Todo ID</th>
+                <th scope="col">ID</th>
                 <th scope="col">Tittle</th>
                 <th scope="col">Description</th>
                 <th scope="col">Action</th>
