--- a/static/chat.css
+++ b/static/chat.css
@@ -4,8 +4,8 @@
 #container{
 	width:500px;
 	height:600px;
-	background:#eff3f7;
-	margin:0 auto;
+	background:transparent;
+	margin :0 auto;
 	font-size:0;
 	border-radius:px;
 	overflow:hidden;
