--- a/templates/login.html
+++ b/templates/login.html
@@ -22,7 +22,7 @@
     text-align: center;
     color: white;
     font-size: 22px;
-    background-color: blue;
+    background-color: purple;
     border-radius: 10px;
     margin: 2px;
     padding: 8px;
@@ -49,7 +49,7 @@
     text-align: center;
     color: white;
     font-size: 15px;
-    background-color: blue;
+    background-color: purple;
     border-radius: 10px;
     margin: 2px;
     padding: 8px;
@@ -74,12 +74,10 @@
     <form method="POST" class="login-form">
         <h1>Login Here</h1>
         <div class="mb-3">
-            <!-- <label for="username" class="form-label">Email address</label> -->
             <input type="email" required class="form-control" name="username" aria-describedby="emailHelp" placeholder="Email">
         </div>
         <br>
         <div class="mb-3">
-            <!-- <label for="password" class="form-label">Password</label> -->
             <input type="password" required class="form-control" name="password" placeholder="Password ">
         </div>
         <br>
