--- a/templates/creatatodo.html
+++ b/templates/creatatodo.html
@@ -40,7 +40,7 @@
     text-align: center;
     color: white;
     font-size: 15px;
-    background-color: purple;
+    background-color: blue;
     border-radius: 10px;
     margin: 2px;
     padding: 8px;
@@ -51,7 +51,7 @@
 {% extends "base.html" %}
 {% block contant %}
     <div class="container text-center">
-        {% include 'navbar2.html' %}
+        {% include 'navbar.html' %}
         <br>
         {% if msg %}
             <div class="alert alert-success" role="alert">
