--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
 
 {% block contant %}
 <div class="container text-center">
-    {% include 'navbar2.html' %}
+    {% include 'navbar.html' %}
     <br>
     {% if msg %}
         <div class="alert alert-success" role="alert">
