--- a/templates/privatechat.html
+++ b/templates/privatechat.html
@@ -13,7 +13,7 @@
 
 {% block contant %}
 <div class="container text-center">
-	{% include 'navbar2.html' %}
+	{% include 'navbar.html' %}
 </div>
 <br>
 <div id="container">
