--- a/templates/seetodos.html
+++ b/templates/seetodos.html
@@ -7,7 +7,7 @@ background-image: url("/static/todo\ bg.png");
 {% extends "base.html" %}
 {% block contant %}
     <div class="container text-center">
-        {% include 'navbar2.html' %}
+        {% include 'navbar.html' %}
         {% if msg %}
             <div class="alert alert-success" role="alert" >
                 {{msg}}
