--- a/templates/todos.html
+++ b/templates/todos.html
@@ -8,7 +8,7 @@
 
 {% block contant %}
     <div class="container text-center">
-        {% include 'navbar2.html' %}
+        {% include 'navbar.html' %}
         <br>
         <div class="icon">
             <h2 class="logo">TODO</h2>
