--- a/templates/users.html
+++ b/templates/users.html
@@ -8,7 +8,7 @@
 
 {% block contant %}
     <div class="container text-center">
-        {% include 'navbar2.html' %}
+        {% include 'navbar.html' %}
         <div class="icon">
             <h2 class="logo">Users</h2>
             <br>
