--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,8 +8,17 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="/docs/">DOCS</a>
+          <a class="nav-link" href="/todo">TODO</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/chat">CHAT</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/ask">LOGOUT</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav pull-right">
+        <a class="navbar-brand">{{username}}</a>
       </ul>
     </div>
   </div>
