--- a/templates/signup.html
+++ b/templates/signup.html
@@ -22,7 +22,7 @@
     text-align: center;
     color: white;
     font-size: 22px;
-    background-color: purple;
+    background-color: blue;
     border-radius: 10px;
     margin: 2px;
     padding: 8px;
@@ -49,7 +49,7 @@
     text-align: center;
     color: white;
     font-size: 15px;
-    background-color: purple;
+    background-color: blue;
     border-radius: 10px;
     margin: 2px;
     padding: 8px;
